[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/scr_fade_maker.gd" type="Script" id=1]

[node name="FadeMaker" type="Node2D"]
script = ExtResource( 1 )

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[node name="FadeDelay" type="Timer" parent="."]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
[connection signal="timeout" from="FadeDelay" to="." method="_on_FadeDelay_timeout"]
